# gnome-apps

./: gtk+3.0_3.8.4-0ubuntu3.dsc  gtk+3.0_3.8.6-0ubuntu2.dsc
banshee/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac
banshee/.pc/Remove-build-time-enable-gapless-playback-option.patch/: configure.ac
banshee/data/: Makefile.am  Makefile.in  addin-xml-strings.cs  banshee.appdata.xml.in  org.bansheeproject.Banshee.service.in  org.bansheeproject.CollectionIndexer.service.in
banshee/data/audio-profiles/: Makefile.am  Makefile.in  aac-novell.xml.in  aac.xml.in  mp3-lame.xml.in  wav.xml.in
banshee/data/desktop-files/: Makefile.am  Makefile.in  banshee-audiocd.desktop.in.in  banshee-media-player.desktop.in.in  banshee.desktop.in.in  banshee.desktop.mime  common.desktop.in
banshee/data/icon-theme-hicolor/: Makefile.in
banshee/debian/: banshee-extension-soundmenu.install  banshee-meego.install  changelog  control  gbp.conf  rules  watch
banshee/debian/patches/: Change-Amazon-redirect-url.patch  Disable-Notification-area-extension-by-default.patch  Enable-sound-menu-extension-by-default.patch  Fix-ambiguity-in-DateTime-class.patch  Initial-port-to-GStreamer-1.0.patch  Use-notify-sharp-3.0-to-match-Gtk-3.0.patch  libbnpx11-Don-t-use-non-existent-macros.patch  series
banshee/docs/: Makefile.in
banshee/docs/Banshee/: Makefile.in
banshee/docs/Hyena/: Makefile.in
banshee/extras/: Makefile.am  Makefile.in
banshee/extras/metrics/: Database.cs  Main.cs  Makefile.am  Makefile.in  MetaMetrics.cs  Metric.cs  MultiUserSample.cs  User.cs
banshee/help/: Makefile.am  Makefile.in
banshee/help/C/: add-podcast.page  advanced.page  extensions.page  import.page  index.page  introduction.page  lastfm.page  manage-playlists.page  play-queue.page  play.page  rb-import.page  ui.page
banshee/help/ca/: add-podcast.page  add-radio.page  advanced.page  amazon.page  ca.po  emusic.page  extensions.page  import.page  index.page  introduction.page  itunes-import.page  keyboardshortcuts.page  lastfm.page  manage-coverart.page  manage-playlists.page  manage-tags.page  play-queue.page  play.page  rb-import.page  search.page  sort.page  sync.page  ui.page
banshee/help/cs/: add-podcast.page  add-radio.page  advanced.page  amazon.page  cs.po  emusic.page  extensions.page  import.page  index.page  introduction.page  itunes-import.page  keyboardshortcuts.page  lastfm.page  manage-coverart.page  manage-playlists.page  manage-tags.page  play-queue.page  play.page  rb-import.page  search.page  sort.page  sync.page  ui.page
banshee/help/da/: add-podcast.page  add-radio.page  advanced.page  amazon.page  da.po  emusic.page  extensions.page  import.page  index.page  introduction.page  itunes-import.page  keyboardshortcuts.page  lastfm.page  manage-coverart.page  manage-playlists.page  manage-tags.page  play-queue.page  play.page  rb-import.page  search.page  sort.page  sync.page  ui.page
banshee/help/de/: add-podcast.page  add-radio.page  advanced.page  amazon.page  de.po  emusic.page  extensions.page  import.page  index.page  introduction.page  itunes-import.page  keyboardshortcuts.page  lastfm.page  manage-coverart.page  manage-playlists.page  manage-tags.page  play-queue.page  play.page  rb-import.page  search.page  sort.page  sync.page  ui.page
banshee/help/el/: add-podcast.page  add-radio.page  advanced.page  amazon.page  el.po  emusic.page  extensions.page  import.page  index.page  introduction.page  itunes-import.page  keyboardshortcuts.page  lastfm.page  manage-coverart.page  manage-playlists.page  manage-tags.page  play-queue.page  play.page  rb-import.page  search.page  sort.page  sync.page  ui.page
banshee/help/en_GB/: add-podcast.page  add-radio.page  advanced.page  amazon.page  emusic.page  en_GB.po  extensions.page  import.page  index.page  introduction.page  itunes-import.page  keyboardshortcuts.page  lastfm.page  manage-coverart.page  manage-playlists.page  manage-tags.page  play-queue.page  play.page  rb-import.page  search.page  sort.page  sync.page  ui.page
banshee/help/es/: add-podcast.page  add-radio.page  advanced.page  amazon.page  emusic.page  es.po  extensions.page  import.page  index.page  introduction.page  itunes-import.page  keyboardshortcuts.page  lastfm.page  manage-coverart.page  manage-playlists.page  manage-tags.page  play-queue.page  play.page  rb-import.page  search.page  sort.page  sync.page  ui.page
banshee/help/fr/: add-podcast.page  add-radio.page  advanced.page  amazon.page  emusic.page  (+18 more)
banshee/libbanshee/: Makefile.am  Makefile.in  banshee-bpmdetector.c  banshee-gst.c  banshee-gst.h  banshee-player-cdda.c  banshee-player-dvd.c  banshee-player-dvd.h  banshee-player-equalizer.c  banshee-player-missing-elements.c  banshee-player-pipeline.c  banshee-player-pipeline.h  banshee-player-private.h  banshee-player-replaygain.c  banshee-player-replaygain.h  banshee-player-video.c  banshee-player-video.h  banshee-player-vis.c  banshee-player.c  banshee-ripper.c  banshee-tagger.c  banshee-transcoder.c
banshee/po/: LINGUAS  POTFILES.in  POTFILES.skip  ast.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  eu.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  lv.po  nb.po  nl.po  nn.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  (+8 more)
banshee/src/: AssemblyInfo.cs  AssemblyInfo.cs.in  Makefile.am  Makefile.in
banshee/tests/: Makefile.am  Makefile.in
gnome-system-log/data/: Makefile.am  Makefile.in  gnome-system-log.1  gnome-system-log.desktop.in.in  logview-toolbar.xml  logview.convert  org.gnome.gnome-system-log.gschema.xml.in
gnome-system-log/help/: Makefile.am  Makefile.in
gnome-system-log/src/: Makefile.am  Makefile.in  logview-about.h  logview-app.c  logview-app.h  logview-filter-manager.c  logview-filter-manager.h  logview-filter.c  logview-filter.h  logview-findbar.c  logview-log.c  logview-loglist.c  logview-main.c  logview-manager.c  logview-prefs.c  logview-utils.c  logview-window.c
(+5521 files in other folders)
