include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

# Module name
DOC_ID = gnome-system-log

# List of figures to be included
DOC_FIGURES = figures/log-viewer-main.png

# List of pages
DOC_PAGES = \
	index.page \
	introduction.page \
	log-close.page \
	log-copy.page \
	log-filter.page \
	log-search.page \
	log-view.page \
	pref-font-size.page

# List of translations
DOC_LINGUAS = ca cs de el en_GB es eu fi fr gl hu it ja ko oc ru sl sv uk zh_CN
