SUBDIRS = \	
	Banshee.Audiobook \
	Banshee.BooScript \
	Banshee.Bpm \
	Banshee.CoverArt \
	Banshee.Daap \	
	Banshee.FileSystemQueue \
	Banshee.InternetArchive \
	Banshee.Fixup \
	Banshee.InternetRadio \
	Banshee.Lastfm \
	Banshee.LastfmStreaming \
	Banshee.LibraryWatcher \
	Banshee.MiniMode \
	Banshee.Mpris \
	Banshee.MiroGuide \
	Banshee.MultimediaKeys \
	Banshee.NotificationArea \
	Banshee.NowPlaying \
	Banshee.OpticalDisc \
	Banshee.PlayerMigration \
	Banshee.PlayQueue \
	Banshee.MeeGo \
	Banshee.Podcasting \
	Banshee.Sample \
	Banshee.SoundMenu \
	Banshee.SqlDebugConsole \
	Banshee.Torrent \
	Banshee.RemoteAudio \
	Banshee.UPnPClient \
	Banshee.Wikipedia \
	Banshee.YouTube


MAINTAINERCLEANFILES = Makefile.in
